fix some layout issue

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -14,6 +14,9 @@
     background-repeat: repeat-x
 }
 
+.navbar {
+    margin-bottom: 0;
+}
 .navbar-brand,.bs-docs-nav .navbar-nav>li>a {
     font-weight: 500;
     color: #563d7c
